--- a/uniper-db-poc/src/app/app.component.html
+++ b/uniper-db-poc/src/app/app.component.html
@@ -3,6 +3,7 @@
 <nav>
   <ul>
     <li><a routerLink="/register-component" routerLinkActive="active">Registeration Page</a></li>
+    <li><a routerLink="/viewuser-component" routerLinkActive="active">View All Users</a></li>
   </ul>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
