--- a/uniper-db-poc/src/app/app.component.html
+++ b/uniper-db-poc/src/app/app.component.html
@@ -1,9 +1,10 @@
-<h1>Anirudh requirement</h1>
+<h1>Uniper POC requirement</h1>
 <!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
 <nav>
   <ul>
     <li><a routerLink="/register-component" routerLinkActive="active">Registeration Page</a></li>
     <li><a routerLink="/viewuser-component" routerLinkActive="active">View All Users</a></li>
+    <li><a routerLink="/viewdatadynamically-component" routerLinkActive="active">View Data Dynamically</a></li>
   </ul>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
