--- a/uniper-db-poc/src/app/viewusers/viewusers.component.html
+++ b/uniper-db-poc/src/app/viewusers/viewusers.component.html
@@ -1,11 +1,20 @@
-<p>viewusers works!</p>
-<table>
-    <thead>
-        <tr>Table name</tr>
-    </thead>
-    <tbody>
-        <tr>Table Body</tr>
-    </tbody>
-</table>
-
-{{users | json}}
+<div class="container">
+    <table class="table table-striped">
+      <thead>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>MobileNumber</th>
+            <th>EmailAddress</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let entry of users">
+          <td>{{ entry.firstName }}</td>
+          <td>{{ entry.lastName }}</td>
+          <td>{{ entry.mobileNumber }}</td>
+          <td>{{ entry.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
