updated nav bar successfully

--- a/uniper-db-poc/src/app/app.component.html
+++ b/uniper-db-poc/src/app/app.component.html
@@ -1,25 +1,23 @@
 <p>
   <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Uniper POC requirement</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+    
+    <span>Uniper POC</span>
+    
   </mat-toolbar>
 </p>
-<!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
-<nav>
-  <ul>
-    <li><a routerLink="/register-component" routerLinkActive="active">Registeration Page</a></li>
-    <li><a routerLink="/viewuser-component" routerLinkActive="active">View All Users</a></li>
-    <li><a routerLink="/viewdatadynamically-component" routerLinkActive="active">View Data Dynamically</a></li>
-  </ul>
+
+
+<nav mat-tab-nav-bar>
+  <a mat-tab-link
+     [routerLink]="['/register-component']"
+     routerLinkActive #rla1="routerLinkActive"
+     [active]="rla1.isActive">Register
+  </a>
+  <a mat-tab-link
+     [routerLink]="['/viewuser-component']"
+     routerLinkActive #rla2="routerLinkActive"
+     [active]="rla2.isActive">View
+  </a>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
