--- a/uniper-db-poc/src/app/viewusers/viewusers.component.html
+++ b/uniper-db-poc/src/app/viewusers/viewusers.component.html
@@ -1,20 +1,43 @@
-<div class="container">
-    <table class="table table-striped">
-      <thead>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>MobileNumber</th>
-            <th>EmailAddress</th>
-          </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let entry of users">
-          <td>{{ entry.firstName }}</td>
-          <td>{{ entry.lastName }}</td>
-          <td>{{ entry.mobileNumber }}</td>
-          <td>{{ entry.email }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef> First Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef> Last Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="mobileNumber">
+      <th mat-header-cell *matHeaderCellDef> Mobile Number </th>
+      <td mat-cell *matCellDef="let element"> {{element.mobileNumber}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="na">
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <button mat-flat-button color="primary" type="submit">Sign Up</button>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
