--- a/uniper-db-poc/src/app/viewusers/viewusers.component.html
+++ b/uniper-db-poc/src/app/viewusers/viewusers.component.html
@@ -3,11 +3,12 @@
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
   
-    <!-- Position Column -->
+    <!-- Position Column 
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container>
+      <td mat-cell *matCellDef="let element"> {{element}} </td>
+    </ng-container> -->
+
   
     <!-- Name Column -->
     <ng-container matColumnDef="firstName">
@@ -31,11 +32,6 @@
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef> Email </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="na">
-      <th mat-header-cell *matHeaderCellDef> Delete </th>
-      <button mat-flat-button color="primary" type="submit">Sign Up</button>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
