--- a/uniper-db-poc/src/app/viewusers/viewusers.component.html
+++ b/uniper-db-poc/src/app/viewusers/viewusers.component.html
@@ -34,6 +34,13 @@
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
+    <!-- Delete Column -->
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="primary" type="button" (click)="onDelete(element)">Delete</button>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
