Filter logic works fine

--- a/uniper-db-poc/src/app/app.component.html
+++ b/uniper-db-poc/src/app/app.component.html
@@ -11,7 +11,7 @@
   <a mat-tab-link
      [routerLink]="['/register-component']"
      routerLinkActive #rla1="routerLinkActive"
-     [active]="rla1.isActive">Register
+     [active]="rla1.isActive">Insert
   </a>
   <a mat-tab-link
      [routerLink]="['/viewuser-component']"
