--- a/uniper-db-poc/src/app/viewusers/viewusers.component.html
+++ b/uniper-db-poc/src/app/viewusers/viewusers.component.html
@@ -1,28 +1,26 @@
+  
+<div>
+  <!-- <div class="example-header">
+    <mat-form-field>
+      <input matInput [(ngModel)]="firstName" (ngModelChange)="applyFilter()" placeholder="Filter">
+    </mat-form-field>
+  </div> -->
+
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Filter">
+  </mat-form-field>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column 
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element}} </td>
-    </ng-container> -->
-
-  
-    <!-- Name Column -->
     <ng-container matColumnDef="firstName">
       <th mat-header-cell *matHeaderCellDef> First Name </th>
       <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
     </ng-container>
-  
-    <!-- Weight Column -->
+
     <ng-container matColumnDef="lastName">
       <th mat-header-cell *matHeaderCellDef> Last Name </th>
       <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
     </ng-container>
-  
-    <!-- Symbol Column -->
+
     <ng-container matColumnDef="mobileNumber">
       <th mat-header-cell *matHeaderCellDef> Mobile Number </th>
       <td mat-cell *matCellDef="let element"> {{element.mobileNumber}} </td>
@@ -44,3 +42,5 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
+  
