--- a/uniper-db-poc/src/app/viewusers/viewusers.component.html
+++ b/uniper-db-poc/src/app/viewusers/viewusers.component.html
@@ -37,5 +37,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator [pageSizeOptions]="[1,3,5]" showFirstLastButtons></mat-paginator>
 </div>
   
