--- a/uniper-db-poc/src/app/deleteuser/deleteuser.component.html
+++ b/uniper-db-poc/src/app/deleteuser/deleteuser.component.html
@@ -1,1 +1,11 @@
-<p>deleteuser works perfectly fine..</p>
+<mat-card class="example-card">
+    <mat-card-title>Delete Data</mat-card-title>
+    <mat-card-content>
+      <p>{{longText}}</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-flat-button (click)="cancle()">Cancel</button>
+      <button mat-flat-button color="warn" (click)="deleteModel()">Yes</button>
+      
+    </mat-card-actions>
+  </mat-card>
