--- a/uniper-db-poc/src/app/viewusers/viewusers.component.html
+++ b/uniper-db-poc/src/app/viewusers/viewusers.component.html
@@ -27,6 +27,12 @@
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
 
+    <!-- Update Column -->
+    <ng-container matColumnDef="update">
+      <th mat-header-cell *matHeaderCellDef> Update </th>
+      <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="primary" type="button" (click)="onUpdate(element)">Update</button>
+    </ng-container>
     <!-- Delete Column -->
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
