--- a/uniper-db-poc/src/app/app.component.html
+++ b/uniper-db-poc/src/app/app.component.html
@@ -9,14 +9,14 @@
 
 <nav mat-tab-nav-bar>
   <a mat-tab-link
-     [routerLink]="['/register-component']"
+     [routerLink]="['/viewtables-component']"
      routerLinkActive #rla1="routerLinkActive"
-     [active]="rla1.isActive">Insert
+     [active]="rla1.isActive">Home
   </a>
   <a mat-tab-link
-     [routerLink]="['/viewuser-component']"
-     routerLinkActive #rla2="routerLinkActive"
-     [active]="rla2.isActive">View
+     [routerLink]="['/viewtables-component']"
+     routerLinkActive #rla1="routerLinkActive"
+     [active]="rla1.isActive">About
   </a>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
