--- a/uniper-db-poc/src/app/component/company/updatecompany/updatecompany.component.html
+++ b/uniper-db-poc/src/app/component/company/updatecompany/updatecompany.component.html
@@ -1,1 +1,65 @@
-<p>updatecompany works!</p>
+<div *ngIf="showUpdateCard else updateTable">
+    <mat-card class="example-card">
+      <mat-card-title>Update Data</mat-card-title>
+      <mat-card-content>
+        <p>{{longText}}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="warn" (click)="updateModel()">Yes</button>
+      </mat-card-actions>
+    </mat-card>
+</div>
+<ng-template #updateTable>
+    <div>
+        <mat-card class="example-card">
+            <mat-card-title>Update Company Details</mat-card-title><br>
+            <mat-card-content>
+                <form [formGroup]="companyForm" (ngSubmit)="onSubmit(companyForm)">
+                    <div class="example-container">
+                      <mat-form-field appearance="fill">
+                        <mat-label>ENTITY_TYPE_NAME</mat-label>
+                        <input formControlName="entity_TYPE_NAME" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>COMPANY_NAME</mat-label>
+                        <input formControlName="company_NAME" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>UPSTREAM_APP</mat-label>
+                        <input formControlName="upstream_APP" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>UPSTREAM_ALIAS</mat-label>
+                        <input formControlName="upstream_ALIAS" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>DOWNSTREAM_APP</mat-label>
+                        <input formControlName="downstream_APP" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>DOWNSTREAM_ALIAS</mat-label>
+                        <input formControlName="downstream_ALIAS" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>INSTRUMENT_NAME</mat-label>
+                        <input formControlName="instrument_NAME" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>INSTRUMENT_ID</mat-label>
+                        <input formControlName="instrument_ID" matInput>
+                      </mat-form-field><br>
+                      <mat-form-field appearance="fill">
+                        <mat-label>UPDATED_BY</mat-label>
+                        <input formControlName="updated_BY" matInput>
+                      </mat-form-field><br>
+                      
+                      
+                    </div> 
+                  </form>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-flat-button color="primary" type="submit">Update</button>
+            </mat-card-actions>
+          </mat-card>
+    </div>    
+</ng-template>
