--- a/uniper-db-poc/src/app/component/company/insertcompany/insertcompany.component.html
+++ b/uniper-db-poc/src/app/component/company/insertcompany/insertcompany.component.html
@@ -8,7 +8,7 @@
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>ENTITY_TYPE_NAME</mat-label>
-          <input formControlName="ENTITY_TYPE_NAME" matInput>
+          <input formControlName="entity_TYPE_NAME" matInput>
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>COMPANY_NAME</mat-label>
@@ -16,33 +16,32 @@
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>UPSTREAM_APP</mat-label>
-          <input formControlName="UPSTREAM_APP" matInput>
+          <input formControlName="upstream_APP" matInput>
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>UPSTREAM_ALIAS</mat-label>
-          <input formControlName="UPSTREAM_ALIAS" matInput>
+          <input formControlName="upstream_ALIAS" matInput>
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>DOWNSTREAM_APP</mat-label>
-          <input formControlName="DOWNSTREAM_APP" matInput>
+          <input formControlName="downstream_APP" matInput>
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>DOWNSTREAM_ALIAS</mat-label>
-          <input formControlName="DOWNSTREAM_ALIAS" matInput>
+          <input formControlName="downstream_ALIAS" matInput>
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>INSTRUMENT_NAME</mat-label>
-          <input formControlName="INSTRUMENT_NAME" matInput>
+          <input formControlName="instrument_NAME" matInput>
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>INSTRUMENT_ID</mat-label>
-          <input formControlName="INSTRUMENT_ID" matInput>
+          <input formControlName="instrument_ID" matInput>
         </mat-form-field><br>
         <mat-form-field appearance="fill">
           <mat-label>UPDATED_BY</mat-label>
-          <input formControlName="UPDATED_BY" matInput>
-        </mat-form-field><br>
-        
+          <input formControlName="updated_BY" matInput>
+        </mat-form-field><br>        
         <button mat-flat-button color="primary" type="submit">Save</button>
       </div> 
     </form>  
