--- a/uniper-db-poc/src/app/component/company/viewcompanies/viewcompanies.component.html
+++ b/uniper-db-poc/src/app/component/company/viewcompanies/viewcompanies.component.html
@@ -12,7 +12,7 @@
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
   
       <ng-container matColumnDef="ALIAS_ID">
-        <th mat-header-cell  *matHeaderCellDef> ALIAS_ID </th>
+        <th mat-header-cell mat-sort-header="sort" *matHeaderCellDef> ALIAS_ID </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
       <ng-container matColumnDef="ENTITY_TYPE_NAME">
